# stlink

./: .env  .gitignore  Cargo.toml  README.md  sqlx-data.json
.sqlx/: query-34a827766861e5931d75a5d09a19249af40dd304fcd52efbf1b63ae7db6f689e.json  query-6da75889422451d33931d2c4b8a6989fa375d968cb8a882461ac205803f93ae4.json  query-cd9dd120ecde3d3aad6eeb2231df8f5d94a9a8f2cf6b04f0286c44d3a3e0ba88.json  query-fd68272ab2773c430172e085ebaf212829e8ae4bd3b28886584f9fc67395ed4b.json
src/: index.html  main.rs  not-found.html  schema.sql  script.js  style.css  view.html
src/static/: index.html  not-found.html  robots.txt  script.js  style.css
