[package]
name = "stlink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
nanoid = "0.4"
serde = "1"
shuttle-axum = "0.47"
shuttle-runtime = "0.47"
shuttle-shared-db = { version = "0.47", features = ["postgres","sqlx"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1"
